ナブメニュー完備

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -28,6 +28,7 @@ body {
     margin: 0;
     padding: 0;
     display: block;
+    overflow-x: hidden;
 }
 
 a {
@@ -38,7 +39,9 @@ a {
     position: relative;
     display: inline-block;
     transition: .3s;
-    color: #db143c;
+    color: #b7e3f2;
+    font-weight: 800;
+    // color: #5475e0;
 }
 .cp_link::after {
     position: absolute;
@@ -58,15 +61,45 @@ a {
     position: absolute;
 }
 
-//動画の斜めエフェクト
-html {
-    height: 100%;
+//トップへ戻るボタン
+
+#page-top {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    font-size: .8rem;
+    z-index: 200;
+    opacity: .9;
+}
+#page-top a {
+    background: #111;
+    text-decoration: none;
+    color: #fff;
+font-family: 'Righteous', cursive;
+// font-family: 'Russo One', sans-serif;
+// font-family: 'Squada One', cursive;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    display: block;
+    z-index: 200;
+}
+#page-top a:hover {
+    text-decoration: none;
+    background: #111;
+    z-index: 200;
 }
 
-body {
-    margin: 0;
-    overflow-x: hidden;
+@media screen and (max-width: 850px){
+#page-top {
+    bottom: 0;
+    left: 5px;
+    z-index: 250;
 }
+}
+
+
+//動画の斜めエフェクト
 
 .bg {
     animation: slide 3s ease-in-out infinite alternate;
@@ -233,7 +266,7 @@ section#nav-test {
                 display: flex;
                 align-items: center;
                 min-height: 48px;
-                margin-left: 60px;
+                margin-left: 90px;
                 cursor: pointer;
                 user-select: none;
 
@@ -298,23 +331,46 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
     top: 780px;
     z-index: 10;
 }
-
+@media screen and (max-width: 850px){
+  .top_sankaku {
+    top: 600px;
+  }
+}
 //上の三角ここまで
 //下のしかくここから
 .bottom_sankaku {
     position: absolute;
     display: block;
     width: 100vw;
-    height: 1200px;
-    background-color: #323639;
-    top: 3310px;
+    height: 1000px;
+    top: 3600px;
+    background-color: #1f1f1f;
     box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.6);
     -webkit-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.6);
     -moz-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.6);
+    // opacity: .9;
     z-index: 16;
 }
+.bottom_sankaku:after {
+    content: "";
+    position: absolute;
+    background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAKUlEQVQYV2M0MrP8zwAFUjJyDIwwARDn2ZNHEAEYB6SQ0Sco/D9IBgYA7c0P2a2Mt8YAAAAASUVORK5CYII=) repeat;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    opacity: .5;
+  }
 
+@media screen and (max-width: 1024px){
+.bottom_sankaku {
+  height: 1500px;
+}
+
+}
 //下のしかくここまで
+
 
 //斜めここから
 .naname_left1 {
@@ -323,7 +379,7 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
     width: 3500px;
     height: 2000px;
     left: -500px;
-    background: url(../images/new02.jpg) top left no-repeat;
+    background: url(../images/new.jpg) top left no-repeat;
     top: 1200px;
     transform: rotate(18deg) scale(1);
     z-index: 10;
@@ -421,13 +477,13 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
     position: absolute;
     display: block;
     width: 3000px;
-    height: 700px;
+    height: 1000px;
     left: -500px;
     background: url(../images/contact.jpg) bottom center no-repeat;
     background-size: cover;
     /* 赤 */
     top: 3040px;
-    transform: rotate(18deg) scale(1);
+    transform: rotate(10deg) scale(1);
     z-index: 16;
 }
 
@@ -462,7 +518,7 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
 section.contents_left {//news
     position: absolute;
     top: 0;
-    left: -130px;
+    left: 0px;
     width: 400px;
     z-index: 30;
 
@@ -472,7 +528,7 @@ section.contents_left {//news
     }
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 4rem;
+            font-size: 6rem;
             margin: 0;
         }
 
@@ -497,12 +553,17 @@ section.contents_left {
     }
     }
 }
+@media screen and (max-width: 850px){
+section.contents_left {
+  left: -230px;
+}
+}
 
 section.contents_right {//about
     position: absolute;
     top: 110px;
-    right: 5%;
-    width: 500px;
+    right: 3%;
+    width: 670px;
     z-index: 30;
     color: #1f1f1f;
 
@@ -512,16 +573,18 @@ section.contents_right {//about
     }
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 4rem;
+            font-size: 6rem;
             margin: 0;
         }
 
         p {
+            font-size: .9rem;
+            width: 75%;
             margin: 15px 0 50px 0;
             line-height: 2rem;
         }
 }
-@media screen and (max-width: 1024px){//about
+@media screen and (max-width: 1300px){//about
 section.contents_right {
     width: 300px;
     top: 180px;
@@ -535,13 +598,24 @@ section.contents_right {
         text-align: center;
                 font-size: 3rem;
     }
+            p {
+            font-size: .8rem;
+            width: 100%;
+            margin: 15px 0 50px 0;
+            line-height: 1.5rem;
+        }
+}
+}
+@media screen and (max-width: 850px){
+section.contents_right {
+    right: 190px;
 }
 }
 
 section.contents_left2 {//company
     position: absolute;
-    top: 600px;
-    left: -130px;
+    top: 650px;
+    left: 0px;
     width: 400px;
     z-index: 30;
 
@@ -551,7 +625,7 @@ section.contents_left2 {//company
     }
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 4rem;
+            font-size: 6rem;
             margin: 50px 0 0 0;
         }
 
@@ -560,10 +634,10 @@ section.contents_left2 {//company
             font-size: .8rem;
         }
 }
-@media screen and (max-width: 1024px){//company
+@media screen and (max-width: 1300px){//company
     section.contents_left2 {
     width: 330px;
-        top: 980px;
+        top: 880px;
         left: -172px;
         background-color: rgba(#fff,.5);
         padding: 20px 0 20px 10px;
@@ -577,32 +651,43 @@ section.contents_left2 {//company
         }
     }
 }
-
+@media screen and (max-width: 850px){
+section.contents_left2 {
+  left: -230px;
+  top: 860px;
+}
+}
 
 section.contents_right2 {//ACCESS
     position: absolute;
-    top: 1050px;
-    right: 5%;
-    width: 500px;
+    top: 1350px;
+    right: 3%;
+    width: 750px;
     z-index: 30;
 
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 4rem;
-            margin: 50px 0 0 0;
+            font-size: 6rem;
+            margin: 50px 0 30px 0px;
         }
-
+        h4{
+          font-size: 1.5rem;
+          margin: 10px 0 20px 0;
+        }
         p {
-            margin: 20px 0 0 0;
+        width: 380px;
+        margin: 0px 0 0 20px;
         line-height: 2rem;
+        font-size: .9rem;
+        // background-color: orange;
         }
 }
 
 
-@media screen and (max-width: 1024px){//ACCESS
+@media screen and (max-width: 1300px){//ACCESS
     section.contents_right2 {
     width: 300px;
-    top: 1600px;
+    top: 1500px;
     right: 217px;
     background-color: rgba(#fff,.5);
     padding: 20px;
@@ -614,13 +699,28 @@ section.contents_right2 {//ACCESS
             font-size: 3rem;
             text-align: center;
         }
+        h4 {
+          margin-top: 20px;
+        }
+            p {
+            font-size: .8rem;
+            width: 100%;
+            line-height: 1.5rem;
+            background-color: transparent;
+        }
     }
+}
+@media screen and (max-width: 850px){
+section.contents_right2 {
+    right: 190px;
+    top: 1530px;
+}
 }
 
 section.contents_left3 {//contact
     position: absolute;
-    top: 1770px;
-    left: -130px;
+    top: 2070px;
+    left: 0px;
     width: 400px;
     z-index: 30;
 
@@ -630,8 +730,8 @@ section.contents_left3 {//contact
     }
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 4rem;
-            margin: 0;
+            font-size: 6rem;
+            margin: 0 0 20px 0;
         }
 
         p {
@@ -639,10 +739,10 @@ section.contents_left3 {//contact
             font-size: .8rem;
         }
 }
-@media screen and (max-width: 1024px){//contact
+@media screen and (max-width: 1300px){//contact
     section.contents_left3 {
     width: 330px;
-        top: 2670px;
+        top: 2260px;
         left: -172px;
         background-color: rgba(#fff,.5);
         padding: 20px 0 20px 10px;
@@ -656,6 +756,190 @@ section.contents_left3 {//contact
         }
     }
 }
+@media screen and (max-width: 850px){
+section.contents_left3 {
+  left: -230px;
+}
+}
+
+section.contents_center {//service
+    position: absolute;
+    top: 3650px;
+    width: 100vw;
+    z-index: 30;
+    text-align: center;
+
+    article.service {
+      width: 70vw;
+        margin: 0 auto;
+    }
+        h2 {
+            font-family: 'Montserrat Subrayada', sans-serif;
+            font-style: italic;
+            font-size: 7rem;
+            margin-top: 20px;
+            margin-bottom: 50px;
+        }
+    .service_p {
+      display: flex;
+      width: 70vw;
+      height: 500px;
+      // background-color: green;
+      z-index: 30;
+      justify-content: space-between;
+      }
+      div.service_img {
+      width: 410px;
+      height: 470px;
+      margin: 15px 20px 10px 0;
+      font-size: .8rem;
+      text-align: justify;
+      text-justify: auto;
+      background-color: rgba(#1f1f1f,.8);
+      box-shadow: 0rem 0rem .4rem 0 rgba(#000, 0.2);
+      // float: left;
+      }
+      .service_img:last-child{
+      margin: 15px 0px 0px 0;
+      }
+      h3 {
+        margin: 20px 30px 10px 30px;
+        font-size: 1.2rem;
+        color: #eee;
+      }
+      p.service_text{
+        padding: 10px 30px 0;
+        font-size: .9rem;
+        line-height: 1.5rem;
+        color: #eee;
+      }
+      img {
+      width: 410px;
+      height: 270px;
+      object-fit: cover; /* この一行を追加するだけ！ */
+      }
+}
+
+@media screen and (max-width: 1024px){//Service
+      section.contents_center {//contact
+          position: absolute;
+          top: 3800px;
+          width: 100vw;
+          z-index: 30;
+          text-align: center;
+
+          article.service {
+            width: 60vw;
+              margin: 0 auto;
+          }
+              h2 {
+                  font-family: 'Montserrat Subrayada', sans-serif;
+                  font-style: italic;
+                  font-size: 3rem;
+                  margin-top: 20px;
+                  margin-bottom: 50px;
+              }
+          .service_p {
+            display: block;
+            width: 60vw;
+            height: 500px;
+            // background-color: green;
+            z-index: 30;
+            justify-content: space-between;
+            }
+            div.service_img {
+            width: 310px;
+            height: 370px;
+            margin: 15px 20px 10px 0;
+            font-size: .8rem;
+            text-align: justify;
+            text-justify: auto;
+            background-color: rgba(#1f1f1f,.8);
+            box-shadow: 0rem 0rem .4rem 0 rgba(#000, 0.2);
+            // float: left;
+            }
+            .service_img:last-child{
+            margin: 15px 0px 0px 0;
+            }
+            h3 {
+              margin: 20px 30px 10px 30px;
+              font-size: .8rem;
+              color: #eee;
+            }
+            p.service_text{
+              width: 250px;
+              padding: 5px 30px 0;
+              font-size: .8rem;
+              line-height: 1.5rem;
+              color: #eee;
+            }
+            img {
+            width: 310px;
+            height: 170px;
+            object-fit: cover; /* この一行を追加するだけ！ */
+            }
+      }
+}
+@media screen and (max-width: 850px){//Service
+      section.contents_center {//contact
+          position: absolute;
+          top: 3800px;
+          width: 100vw;
+          z-index: 30;
+          text-align: center;
+          article.service {
+            width: 83vw;
+              margin: 0 0 0 30px;
+          }
+              h2 {
+                  font-family: 'Montserrat Subrayada', sans-serif;
+                  font-style: italic;
+                  font-size: 3rem;
+                  margin-top: 20px;
+                  margin-bottom: 50px;
+              }
+          .service_p {
+            display: block;
+            width: 60vw;
+            height: 500px;
+            // background-color: green;
+            z-index: 30;
+            justify-content: space-between;
+            }
+            div.service_img {
+            width: 310px;
+            height: 370px;
+            margin: 15px 20px 10px 0;
+            font-size: .8rem;
+            text-align: justify;
+            text-justify: auto;
+            background-color: rgba(#1f1f1f,.8);
+            box-shadow: 0rem 0rem .4rem 0 rgba(#000, 0.2);
+            // float: left;
+            }
+            .service_img:last-child{
+            margin: 15px 0px 0px 0;
+            }
+            h3 {
+              margin: 20px 30px 10px 30px;
+              font-size: .8rem;
+              color: #eee;
+            }
+            p.service_text{
+              width: 250px;
+              padding: 5px 30px 0;
+              font-size: .8rem;
+              line-height: 1.5rem;
+              color: #eee;
+            }
+            img {
+            width: 310px;
+            height: 170px;
+            object-fit: cover; /* この一行を追加するだけ！ */
+            }
+      }
+}
+
 
 //company lineここから
 $container-shadow: 0.5rem 0.5rem 2rem 0 rgba(black, 0.2);
@@ -689,11 +973,11 @@ $dot-diameter: 8px;
   &:before {
     content: '';
     position: absolute;
-    top: -15px;
+    top: -30px;
     left:calc(33% + 15px); //$gutter/2
     bottom: 0px;
-    width: $border-width;
-    background: #ddd;
+    width: 5px;
+    background: #fff;
   }
   &:after {
     content: "";
@@ -770,6 +1054,7 @@ $dot-diameter: 8px;
     }
     .timeline:before {
     background: #1f1f1f;
+    top: -15px;
     }
     .entry .title {
         padding-right: 15px;
@@ -781,6 +1066,19 @@ $dot-diameter: 8px;
 //company lineここまで
 
 //accessここから
+.googlemap {
+  float: left;
+}
+@media screen and (max-width: 1024px){//company line
+.mapsize {
+  width: 295px;
+  height: 295px;
+}
+}
+.access_text {
+  float: right;
+  padding: 0 0 0 20px;
+}
 article.access{
     p {
         margin: 0;
@@ -788,6 +1086,7 @@ article.access{
     }
     ul {
       list-style-type: none;
+      padding: 0;
       }
       li {
       }
@@ -922,38 +1221,37 @@ $pink: #ee9cb4;
 
 // Media Queries
 
-@media only screen and (max-width:480px) {
-.container_contact,.row {
-background-color: rgba(#fff,0);
+@media only screen and (max-width:1024px) {
+.container_contact {
+  background-color: rgba(#fff,0);
+  max-width: 320px;
+  min-width: 320px;
+  padding: 0;
 }
+.row {
+  background-color: rgba(#fff,0);
+}
+  .body {
+  padding: 0;
+  }
   .pull-right {
     float: none;
   }
   input {
-    width: 100%;
+    width: 80%;
   }
   label {
-    width: 100%;
-    display: inline-block;
-    float: left;
-    clear: both;
+    width: 90%;
   }
   li, p {
-   width: 100%;
+   width: 90%;
   }
-  input.btn {
-   margin: 1.5em 0 0.5em;
-  }
-  h1 {
-   font-size: pxtoem(36, 16);
-  }
-  h3 {
-    font-size: pxtoem(18, 16)
-  }
-  li small {
-   display: none;
+  textarea {
+    margin-bottom: 30px;
   }
 }
+
+
 //contactここまで
 
 
@@ -965,9 +1263,9 @@ footer {
     display: block;
     left: 0;
     right: 0;
-    top: 4020px;
+    top: 4420px;
     bottom: 0;
-    height: 500px;
+    height: 460px;
     width: 100vw;
     z-index: 16;
     background-color: rgba(#1f1f1f, 1);
@@ -979,11 +1277,12 @@ footer {
 
 .footer {
     position: relative;
-    top: 50px;
+    top: 0px;
     width: 100vw;
     height: 60px;
     background-color: #1f1f1f;
     line-height: 3.5rem;
+    z-index: 40;
 }
 
 section.movie {
@@ -1003,7 +1302,7 @@ section.movie {
     div {
         float: left;
         font-size: .8rem;
-        color: rgba(#fff,.7);
+        color: rgba(#fff,.3);
         line-height: 2rem;
         margin: 50px 30px 20px 30px;
         height: 400px;
@@ -1025,9 +1324,167 @@ section.movie:after {
 
 @media screen and (max-width: 1024px){
 footer {
-    top: 4500px;
+    top: 5100px;
+}
+.movie {
+  width: 300px;
 }
 }
-
 
 //footerここまで
+
+///スマホナブメニューここから
+@media screen and (max-width: 850px){
+
+/*
+ * Made by Erik Terwan
+ * 24th of November 2015
+ * MIT License
+ *
+ *
+ * If you are thinking of using this in
+ * production code, beware of the browser
+ * prefixes.
+ */
+
+.none{
+  display:none;
+}
+
+a{
+  text-style: none;
+  transition: color 0.3s ease;
+  color: #fff;
+}
+
+a:hover
+{
+  color: #db143c;
+}
+
+#menuToggle
+{
+  position: fixed;
+  display: block;
+  top: 20px;
+  left: 20px;
+  z-index: 201;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 202; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #1f1f1f;
+  border-radius: 3px;
+
+  z-index: 201;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #db143c;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 100px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+
+  background: rgba(#1f1f1f,.8);
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+}
+///スマホナブメニューここまで
