serviceの文字幅修正、大PCの時のスマホメニューの日表示設定。

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -243,6 +243,10 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
 //scroll downボタンここまで
 
 //ヘッダーメニューここから
+.sumaho_none{
+  display:none;
+}
+
 nav {
     position: fixed;
     display: inline-block;
@@ -322,7 +326,7 @@ section#nav-test {
     line-height: 1.8;
     text-align: center;
     font-weight: 400;
-    z-index: 10;
+    z-index: 50;
 // font-family: 'Righteous', cursive;
 font-family: 'Russo One', sans-serif;
 // font-family: 'Squada One', cursive;
@@ -356,6 +360,7 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
     width: 100vw;
     height: 1000px;
     top: 3800px;
+    background: linear-gradient(126deg, rgba(0,151,141,0) 48%, #DB143C 48%) no-repeat 50% 50% / 100% 100%;
     background-color: #1f1f1f;
     box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.6);
     -webkit-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.6);
@@ -372,7 +377,7 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
     left: 0;
     right: 0;
     z-index: 2;
-    opacity: .5;
+    opacity: .7;
   }
 @media screen and (max-width: 1300px){
 .bottom_sankaku {
@@ -1428,7 +1433,7 @@ section.contents_center {//service
       }
       div.service_img {
       width: 410px;
-      height: 470px;
+      height: 520px;
       margin: 15px 20px 10px 0;
       font-size: .8rem;
       text-align: justify;
@@ -1441,14 +1446,14 @@ section.contents_center {//service
       margin: 15px 0px 0px 0;
       }
       h3 {
-        margin: 20px 30px 10px 30px;
+        margin: 25px 30px 10px 30px;
         font-size: 1.2rem;
         color: #eee;
       }
       p.service_text{
-        padding: 10px 30px 0;
+        padding: 15px 30px 0;
         font-size: .9rem;
-        line-height: 1.5rem;
+        line-height: 2rem;
         color: #eee;
       }
       img {
@@ -1692,7 +1697,7 @@ footer {
 //footerここまで
 
 ///スマホナブメニューここから
-@media screen and (max-width: 850px){
+@media screen and (max-width: 1024px){
 
 /*
  * Made by Erik Terwan
@@ -1714,7 +1719,6 @@ a{
   transition: color 0.3s ease;
   color: #fff;
 }
-
 a:hover
 {
   color: #db143c;
@@ -1815,13 +1819,17 @@ a:hover
 #menu
 {
   position: absolute;
-  width: 100px;
+  width: 90px;
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-
-  background: rgba(#1f1f1f,.8);
-  list-style-type: none;
+  background: rgba(#1f1f1f,.9);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+/*   background: -moz-linear-gradient(left, #1f1f1f 70%, transparent 80%);
+  background: -webkit-linear-gradient(left, #1f1f1f 70%, transparent 80%);
+  background: linear-gradient(to right, #1f1f1f 70%, transparent 80%);
+   */
+     list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
 
