--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -259,7 +259,7 @@ nav {
     z-index: 10;
     font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-    z-index: 50;
+    z-index: 55;
 }
 
 section#nav-test {
@@ -677,7 +677,7 @@ section.contents_right {
     section.contents_right {
             width: 300px;
             left: -230px;
-            top: 100px;
+            top: 150px;
         h2 {
             margin: 0px;
             font-size: 3rem;
@@ -1566,11 +1566,11 @@ section.contents_center {//service
                   font-size: 3rem;
                   margin-top: 50px;
                   margin-bottom: 20px;
-                  margin-left: 20px;
+                 margin-left: -210px
               }
           .service_p {
             display: block;
-            width: 60vw;
+            width: 310px;
             height: 500px;
             // background-color: green;
             z-index: 30;
