--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,6 +24,7 @@ font-family: 'Timmana', sans-serif;
 
 // 全体
 html {
+    max-width: 100vw;
   overflow-x: hidden;
 }
 body {
@@ -72,29 +73,29 @@ a {
 }
 
 //動画の全画面表示
-.fitMovie {
+.box {
     position: relative;
     width: 100vw;
+    max-height: 100vh;
     top: -100px;
-    overflow-x: hidden;
+    z-index: 1;
 }
-@media screen and (max-width: 1200px){
-    .fitMovie {
-        position: relative;
-        width: 100vw;
-        top: -200px;
-        overflow-x: hidden;
+@media screen and (max-width: 1155px){
+.box {
+    top: -300px;
     }
 }
-@media screen and (max-width: 640px){
+@media screen and (max-width: 376px){
     .fitMovie {
-        position: relative;
-        width: 100vw;
-        top: -300px;
-        overflow-x: hidden;
+        left: -100%;
+        top: 0px;
     }
-}
+    .box {
 
+    max-width: 100vw;
+    overflow: hidden;
+}
+}
 //トップへ戻るボタン
 
 #page-top {
@@ -135,43 +136,35 @@ font-family: 'Righteous', cursive;
 
 //動画の斜めエフェクト
 
-.bg_naname {
-    position: absolute;
-    width: 100vw;
-    height: 1000px;
-    z-index: 5;
-    overflow: hidden;
-}
 
 .bg {
-    animation: slide 3s ease-in-out infinite alternate;
-    background-image: linear-gradient(-60deg, #db143c 30%, #fff 20%);
-    bottom: 0;
-    left: -50%;
-    opacity: .1;
-    position: absolute;
-    right: -50%;
-    top: 0;
-    z-index: 5;
+  animation:slide 2s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, pink 50%, #fff 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.1;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index: 5;
 }
 
 .bg2 {
-    animation-direction: alternate-reverse;
-    animation-duration: 2s;
+  animation-direction:alternate-reverse;
+  animation-duration:2s;
 }
 
 .bg3 {
-    animation-duration: 4s;
+  animation-duration:3s;
 }
 
 @keyframes slide {
-    0% {
-        transform: translateX(-25%);
-    }
-
-    100% {
-        transform: translateX(25%);
-    }
+  0% {
+    transform:translateX(-5%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
 }
 
 //動画の斜めエフェクトここまで
@@ -181,13 +174,13 @@ font-family: 'Righteous', cursive;
     position: absolute;
     top: 800px;
     left: 49%;
-    z-index: 40;
+    z-index: 70;
 }
 @media screen and (max-width: 376px){
     .demo {
         position: absolute;
-        top: 720px;
-        left: 49%;
+        top: 620px;
+        left: 45%;
     }
 }
 .demo section::after {
@@ -213,7 +206,7 @@ font-family: 'Righteous', cursive;
   letter-spacing: .1em;
   text-decoration: none;
   transition: opacity .3s;
-text-shadow:0px 0px 5px rgba(#ababab,.5);
+text-shadow:0px 0px 5px rgba(#ababab,.1);
 }
 .demo a:hover {
   opacity: .5;
@@ -357,7 +350,7 @@ section#nav-test {
 //キャッチコピーここから
 .title_box {
     position: relative;
-    width: 100vw;
+    max-width: 100vw;
     top: 300px;
     color: #fff;
     font-size: 7rem;
@@ -365,11 +358,31 @@ section#nav-test {
     text-align: center;
     font-weight: 400;
     z-index: 50;
+    overflow: hidden;
 // font-family: 'Righteous', cursive;
 font-family: 'Russo One', sans-serif;
 // font-family: 'Squada One', cursive;
 text-shadow:0px 0px 5px rgba(#ababab,.5);
     line-height: 5.5rem;
+}
+@media screen and (max-width: 376px){
+.title_box {
+    position: relative;
+    max-width: 100vw;
+    top: 170px;
+    color: #fff;
+    font-size: 5.2rem;
+    line-height: 1.3rem;
+    text-align: center;
+    font-weight: 400;
+    z-index: 50;
+    overflow: hidden;
+// font-family: 'Righteous', cursive;
+font-family: 'Russo One', sans-serif;
+// font-family: 'Squada One', cursive;
+text-shadow:0px 0px 5px rgba(#ababab,.5);
+    line-height: 5.5rem;
+}
 }
 //キャッチコピーここまで
 
@@ -379,6 +392,61 @@ main {
     position: relative;
     top: -100px;
     height: 2800px;
+}
+section.wrapwrap {
+    position: relative;
+    width: 100vw;
+    height: 2900px;
+    top:0px;
+    background-color: #000;
+    padding-top: 300px;
+    margin-bottom: 400px;
+    overflow: hidden;
+    z-index: 50;
+}
+@media screen and (max-width: 1160px){
+section.wrapwrap {
+    top: -200px;
+    padding-top: 300px;
+}
+}
+@media screen and (max-width: 1450px){
+section.wrapwrap {
+    top: -200px;
+    padding-top: 300px;
+    padding-bottom: 900px;
+}
+}
+@media screen and (max-width: 1350px){
+section.wrapwrap {
+    top: -200px;
+    padding-top: 300px;
+    padding-bottom: 1100px;
+}
+}
+@media screen and (max-width: 1024px){
+section.wrapwrap {
+    top: -200px;
+    padding-top: 300px;
+    padding-bottom: 3000px;
+    height: 700px;
+}
+}
+@media screen and (max-width: 1000px){
+section.wrapwrap {
+    top: -200px;
+    padding-top: 300px;
+    padding-bottom: 2700px;
+    height: 1800px;
+}
+}
+@media screen and (max-width: 376px){
+section.wrapwrap {
+    top: -200px;
+    padding-top: 300px;
+    padding-bottom: 2700px;
+    height: 1000px;
+}
 }
 
 @media screen and (max-width: 376px){
@@ -395,8 +463,8 @@ main {
     width: 100vw;
     height: 500px;
     background-color: #111;
-    top: -200px;
-    z-index: 10;
+    top: -100px;
+    z-index: 2;
 }
 @media screen and (max-width: 376px){
     .top_sankaku {
@@ -419,7 +487,7 @@ main {
     background: url(../images/new.jpg) top center no-repeat;
     top: -640px;
     transform: rotate(18deg) scale(1);
-    z-index: 10;
+    z-index: 3;
 }
 @media screen and (max-width: 1024px){
     .naname_left1 {//NEWS
@@ -795,22 +863,20 @@ main {
     position: absolute;
     width: 100vw;
     margin-left: 250px;
+    padding-top: 14%;
     z-index: 30;
-}
+    }
 @media screen and (max-width: 376px){
         .container {
-            position: absolute;
-            width: 100vw;
             height: 1500px;
-            margin-left: 250px;
-            z-index: 30;
+           padding-top: 50%;
         }
 }
 @media screen and (max-width: 2000px){
     .container {
         top: 950px;
     }
-ser
+
 section.contents_left {//news
     position: relative;
     top: -1000px;
@@ -1802,7 +1868,7 @@ section.contents_center {//service
             font-style: italic;
             font-size: 7rem;
             margin-top: 20px auto 40px auto;
-            padding-left: 150px;
+            padding-left: 0px;
         }
     .service_p {
       display: flex;
@@ -1844,28 +1910,36 @@ section.contents_center {//service
       }
 }
 
-@media screen and (max-width: 1600px){//Service
+@media screen and (max-width: 1800px){//Service
       section.contents_center {
           top: -7540px;
           width: 90vw;
+          h2 {
+            width: 65vw;
+           padding-left: 100px;
+           margin: 10px 0 50px 0;
+           text-align: center;
+          }
      }
 }
 @media screen and (max-width: 1450px){//Service
       section.contents_center {
-          top: -8200px;
-          width: 80vw;
-        h2 {
-          padding-left: 210px;
-        }
+          top: -8150px;
+          width: 90vw;
+          h2 {
+            width: 75vw;
+           margin: 10px 0 50px 0;
+           text-align: center;
+          }
      }
 }
 @media screen and (max-width: 1350px){//Service
       section.contents_center {
-          top: -7800px;
+          top: -8150px;
           width: 70vw;
         h2 {
-        margin: 10px 0 20px 0;
-        padding-left: 350px;
+            width: 85vw;
+            margin: 10px 0 20px 0;
         }
       .service_p {
       display: flex;
@@ -1907,14 +1981,63 @@ section.contents_center {//service
       }
      }
 }
+@media screen and (max-width: 1300px){//Service
+      section.contents_center {
+          top: -7950px;
+          width: 60vw;
+          margin-left: -20px;
+        h2 {
+            width: 85vw;
+            margin: 10px 0 20px 0;
+        }
+      .service_p {
+      display: flex;
+      width: 75vw;
+      height: 500px;
+      z-index: 30;
+      justify-content: space-between;
+        padding-left: 100px;
+      }
+      div.service_img {
+      width: 330px;
+      height: 520px;
+      margin: 15px 20px 10px 0;
+      font-size: .8rem;
+      text-align: justify;
+      text-justify: auto;
+      background-color: rgba(#1f1f1f,.8);
+      box-shadow: 0rem 0rem .4rem 0 rgba(#000, 0.2);
+      // float: left;
+      }
+      .service_img:last-child{
+      margin: 15px 0px 0px 0;
+      }
+      h3 {
+        margin: 25px 30px 0px 30px;
+        font-size: 1.2rem;
+        color: #eee;
+      }
+      p.service_text{
+        padding: 15px 30px 0;
+        font-size: .8rem;
+        line-height: 1.8rem;
+        color: #eee;
+      }
+      img {
+      width: 330px;
+      height: 250px;
+      object-fit: cover; /* この一行を追加するだけ！ */
+      }
+     }
+}
 @media screen and (max-width: 1200px){//Service
       section.contents_center {
           top: -8100px;
           width: 70vw;
+        margin-left: -40px;
         h2 {
-            margin: 10px 0 20px 0;
-            padding-left: 450px;
-        }
+           width: 100vw;
+         }
           article.service {
             width: 300px;
               margin: 0 0 0 30px;
@@ -2026,10 +2149,10 @@ section.contents_center {//service
 }
 @media screen and (max-width: 1024px){//Service
       section.contents_center {
-          top: -7500px;
+          top: -9000px;
           width: 70vw;
           article.service {
-              margin: 0 0 0 -80px;
+              margin: 0 0 0 -20px;
           }
               h2 {
                   font-family: 'Montserrat Subrayada', sans-serif;
@@ -2080,42 +2203,152 @@ section.contents_center {//service
             }
     }
 }
-@media screen and (max-width: 1024px){//Service
+@media screen and (max-width: 1000px){//Service
       section.contents_center {
-          top: -8100px;
-          width: 70vw;
+          top: -9000px;
+          width: 100vw;
+          text-align: center;
           article.service {
+            width: 100vw;
               margin: 0 auto;
           }
               h2 {
-                  font-family: 'Montserrat Subrayada', sans-serif;
-                  font-style: italic;
                   font-size: 6rem;
                   margin-top: 50px;
                   margin-bottom: 20px;
-                 margin-left: -400px
               }
           .service_p {
             display: block;
-            width: 300px;
+            width: 600px;
             height: 500px;
-            // background-color: green;
             z-index: 30;
+            margin-left: 80px;
             justify-content: space-between;
             }
             div.service_img {
-            width: 310px;
+            width: 610px;
             height: 370px;
-            margin: 15px 10px 10px 10px;
+            margin: 15px 20px 10px 0;
             font-size: .8rem;
             text-align: justify;
             text-justify: auto;
             background-color: rgba(#1f1f1f,.8);
             box-shadow: 0rem 0rem .4rem 0 rgba(#000, 0.2);
-            float: left;
+            float: none;
             }
             .service_img:last-child{
-            margin: 15px 0px 0px 10px;
+            margin: 15px 0px 0px 0;
+            }
+            h3 {
+              margin: 30px 30px 10px 30px;
+              font-size: 1.5rem;
+              color: #eee;
+              text-align: center;
+            }
+            p.service_text{
+              width: 400px;
+              padding: 10px 100px 0;
+              font-size: .8rem;
+              line-height: 1.5rem;
+              color: #eee;
+            }
+            img {
+            width: 610px;
+            height: 170px;
+            object-fit: cover; /* この一行を追加するだけ！ */
+            }
+      }
+}@media screen and (max-width: 900px){//Service
+      section.contents_center {
+          top: -9700px;
+          width: 100vw;
+          text-align: center;
+          article.service {
+            width: 100vw;
+              margin: 0 auto;
+          }
+              h2 {
+                  font-size: 6rem;
+                  margin-top: 50px;
+                  margin-bottom: 20px;
+              }
+          .service_p {
+            display: block;
+            width: 600px;
+            height: 500px;
+            z-index: 30;
+            margin-left: 80px;
+            justify-content: space-between;
+            }
+            div.service_img {
+            width: 610px;
+            height: 370px;
+            margin: 15px 20px 10px 0;
+            font-size: .8rem;
+            text-align: justify;
+            text-justify: auto;
+            background-color: rgba(#1f1f1f,.8);
+            box-shadow: 0rem 0rem .4rem 0 rgba(#000, 0.2);
+            float: none;
+            }
+            .service_img:last-child{
+            margin: 15px 0px 0px 0;
+            }
+            h3 {
+              margin: 30px 30px 10px 30px;
+              font-size: 1.5rem;
+              color: #eee;
+              text-align: center;
+            }
+            p.service_text{
+              width: 400px;
+              padding: 10px 100px 0;
+              font-size: .8rem;
+              line-height: 1.5rem;
+              color: #eee;
+            }
+            img {
+            width: 610px;
+            height: 170px;
+            object-fit: cover; /* この一行を追加するだけ！ */
+            }
+      }
+}@media screen and (max-width: 850px){//Service
+      section.contents_center {
+          top: -9700px;
+          width: 100vw;
+          text-align: center;
+          article.service {
+            width: 85vw;
+              margin: 0 auto;
+          }
+              h2 {
+                width: 100vw;
+                font-size: 3rem;
+                text-align: center;
+              }
+          .service_p {
+            display: block;
+            width: 310px;
+            height: 500px;
+            // background-color: green;
+            z-index: 30;
+            justify-content: space-between;
+            margin-left: 130px;
+            }
+            div.service_img {
+            width: 310px;
+            height: 370px;
+            margin: 15px 20px 10px 0;
+            font-size: .8rem;
+            text-align: justify;
+            text-justify: auto;
+            background-color: rgba(#1f1f1f,.8);
+            box-shadow: 0rem 0rem .4rem 0 rgba(#000, 0.2);
+            float: none;
+            }
+            .service_img:last-child{
+            margin: 15px 0px 0px 0;
             }
             h3 {
               margin: 20px 30px 10px 30px;
@@ -2134,26 +2367,20 @@ section.contents_center {//service
             height: 170px;
             object-fit: cover; /* この一行を追加するだけ！ */
             }
-    }
-}
-@media screen and (max-width: 850px){//Service
+      }
+}@media screen and (max-width: 376px){//Service
       section.contents_center {
-          position: absolute;
-          top: 3780px;
-          width: 300px;
-          z-index: 30;
+          top: -9700px;
+          width: 100vw;
           text-align: center;
           article.service {
-            width: 300px;
-              margin: 0 0 0 30px;
+            width: 80vw;
+              margin: 0 auto;
           }
               h2 {
-                  font-family: 'Montserrat Subrayada', sans-serif;
-                  font-style: italic;
-                  font-size: 3rem;
-                  margin-top: 50px;
-                  margin-bottom: 20px;
-                 margin-left: -210px
+                width: 100vw;
+                font-size: 3rem;
+                text-align: center;
               }
           .service_p {
             display: block;
@@ -2162,6 +2389,7 @@ section.contents_center {//service
             // background-color: green;
             z-index: 30;
             justify-content: space-between;
+            margin-left: -65px;
             }
             div.service_img {
             width: 310px;
@@ -2205,7 +2433,7 @@ section.contents_center {//service
 footer {
     position: relative;
     display: block;
-    bottom: 0;
+    bottom: -300px;
     height: 460px;
     width: 100vw;
     z-index: 46;
@@ -2228,18 +2456,20 @@ footer {
 
 @media screen and (max-width: 1024px){
     footer {
-        top: 1700px;
+        top: 900px;
     }
     .movie {
       width: 300px;
     }
+}@media screen and (max-width: 1000px){
+    footer {
+        top: 1700px;
+    }
 }
 @media screen and (max-width: 376px){//footer
-        footer {
-            left: 0;
-            right: 0;
-            bottom: 0;
-        }
+    footer {
+        top: 1900px;
+    }
 }
 
 .footer {
@@ -2434,13 +2664,13 @@ a:hover
             content: "";
             display: block;
             position: absolute;
-            width: 100%;
+            width: 110%;
             height: 5px;
             bottom: 0;
-            right: 0%;
-            z-index: 10;
-            background: rgba(orange,.5);
-            // background: rgba(50,54,57,0.9);
+            right: -100%;
+            z-index: 100;
+            // background: rgba(orange,.5);
+            background: rgba(50,54,57,0.9);
             overflow-x: hidden;
 }
 }
